add entry api
